Fixed coffee-row-half height on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1284,7 +1284,8 @@ ka-coffee-port-what {
       height: 100%; }
       @media screen and (max-width: 685px) {
         ka-coffee-port-what intro #rl-coffee-what-row-half {
-          width: 100%; } }
+          width: 100%;
+          height: 50%; } }
     ka-coffee-port-what intro .notouch {
       pointer-events: none; }
       ka-coffee-port-what intro .notouch .rl-coffee-float-btn {
@@ -1590,7 +1591,7 @@ ka-coffee-port-what {
   ka-coffee-port-what videoplayer, ka-coffee-port-what videoplayer-side {
     overflow: hidden;
     margin-top: 117px !important;
-    height: inherit; }
+    height: 100%; }
     ka-coffee-port-what videoplayer .rl-coffee-videoPlayer-info, ka-coffee-port-what videoplayer-side .rl-coffee-videoPlayer-info {
       position: relative;
       z-index: 2;
