--- a/public/css/components/_intro.scss
+++ b/public/css/components/_intro.scss
@@ -12,6 +12,7 @@ intro {
         position: relative;
         @media screen and (max-width: 685px) {
             width: 100%;
+            height: 50%;
         }
         overflow: hidden;
         height: 100%;
