--- a/public/css/components/_videoplayer.scss
+++ b/public/css/components/_videoplayer.scss
@@ -1,7 +1,7 @@
 videoplayer,videoplayer-side {
 	overflow: hidden;
 	margin-top: 117px !important;
-	height: inherit;
+	height: 100%;
 
 	.rl-coffee-videoPlayer-info {
 		position: relative;
